trying to fix searchbar on mobile issue

--- a/style.css
+++ b/style.css
@@ -5,12 +5,20 @@
     font-size: 10px;
 }
 
-body {
+html {
+    height: 100%;
+}
 
+body {
+    height: 100vh;
 
     /* background: linear-gradient(to bottom, #9be2fe 0%, #67d1fb 100%); */
 
 
+}
+
+.wrapper {
+    /* margin-top: 10vh; */
 }
 
 .hamburger {
@@ -81,8 +89,10 @@ header {
     font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
     color: rgb(107, 0, 0);
+    text-overflow: 1px 1px 1px;
     text-align: center;
     margin-bottom: 2%;
+    text-shadow: 1px 1px 0.5px rgba(57, 53, 53, 0.754);
 
 
 }
